appId: app.mindkshetra.mobile
---
- runFlow:
    file: ../helpers/advance-to-auth.yaml
- extendedWaitUntil:
    visible:
      id: onboarding-guest
    timeout: 10000
- tapOn:
    id: onboarding-guest
- waitForAnimationToEnd
- runFlow:
    when:
      visible:
        id: onboarding-guest
    commands:
      - tapOn:
          id: onboarding-guest
- extendedWaitUntil:
    visible:
      id: screen-home
    timeout: 20000
